config/samples/ingress_v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    cdn-origin-controller.gympass.com/cdn.group: "foo"
    cdn-origin-controller.gympass.com/cdn.class: "default"
spec:
  rules:
  - host: foo.bar
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
